<resources>
    <string name="app_name">Social App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginimage">LoginImage</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="clique_aqui_para_criar_uma_conta">Clique aqui para criar uma conta</string>
    <string name="criar_conta">Criar conta</string>
    <string name="novo_registo">Novo registo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="chat">Enter</string>
    <string name="home_image">Home Image</string>
    <string name="change">Change!</string>
    <string name="change_password">Change Password</string>
    <string name="nome_actual">Nome actual</string>
    <string name="desc_actual">Desc Actual</string>
    <string name="email_actual">Email actual</string>
    <string name="aniversario_atual">01/01/2000</string>
    <string name="aniversario">Aniversario:</string>
    <string name="nova_pass">Nova pass</string>
    <string name="please_enter_your_old_and_new_passwords_below">Please enter your old and new passwords below:</string>
    <string name="confirmar">Confirmar</string>
    <string name="pass_actual">Pass actual</string>
    <string name="confirmar_nova_pass">Confirmar nova pass</string>
    <string name="bluetooth_icon">bluetooth icon</string>
    <string name="feel_free_to_chat_or_check_your_feed">Feel free to chat or check your feed :)</string>
    <string name="feed">FEED</string>
    <string name="chatUppercase">CHAT</string>
    <string name="send">Send</string>
    <string name="searching_for_nearby_devices">Searching for nearby devices</string>
    <string name="turn_on_bluetooth">Turn on bluetooth</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="email">Email</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!--  BluetoothChat -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to device></string>
    <!-- add to ^: <xliff:g id="device_name">%1$s</xliff:g -->
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!--Intro Mess -->
    <string name="intro_message">
        <![CDATA[


            This application allows two Android devices to carry out two-way text chat over
            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilities, such as:
              (1) Scanning for other Bluetooth devices
              (2) Querying the local Bluetooth adapter for paired Bluetooth devices
              (3) Establishing RFCOMM channels/sockets
              (4) Connecting to a remote device
              (5) Transferring data over Bluetooth


        ]]>
    </string>

</resources>