<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currentPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.ChangePassword">

    <EditText
        android:id="@+id/newPassConf"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:layout_marginTop="22dp"
        android:hint="@string/confirmar_nova_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPass"
        android:autofillHints="" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:hint="@string/nova_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPass"
        android:autofillHints="" />

    <EditText
        android:id="@+id/oldPass"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:inputType="textPassword"
        android:hint="@string/pass_actual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/please_enter_your_old_and_new_passwords_below"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassConf" />
</androidx.constraintlayout.widget.ConstraintLayout>